Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,92 +1,85 @@
-html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Raspadinha DStreet</title>
+  <title>DStreet - Pagamento PIX</title>
   <style>
     body {
-      margin: 0;
-      background: black;
-      color: white;
-      font-family: 'Arial Black', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      padding: 20px;
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #fff;
+      text-align: center;
+      padding: 50px;
+    }
+
+    .container {
+      background-color: #1e1e1e;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px #00ffcc44;
+      max-width: 500px;
+      margin: auto;
     }
 
     h1 {
-      color: #FFD700;
-      font-size: 2rem;
-      text-align: center;
-      text-shadow: 0 0 5px #FFD700, 0 0 10px #FF4500, 0 0 20px #FF4500;
-      animation: piscar 1s infinite alternate;
+      color: #00ffcc;
     }
 
-    @keyframes piscar {
-      0% {opacity: 1;}
-      100% {opacity: 0.6;}
+    .pix-code {
+      background: #fff;
+      color: #000;
+      padding: 15px;
+      border-radius: 8px;
+      word-break: break-all;
+      margin: 20px 0;
     }
 
-    .btn-comprar {
-      background: #FFD700;
-      color: black;
-      font-size: 1.5rem;
-      font-weight: bold;
-      padding: 15px 30px;
+    button {
+      background: #00ffcc;
       border: none;
-      border-radius: 10px;
-      margin-top: 40px;
+      padding: 12px 20px;
+      font-size: 16px;
+      border-radius: 6px;
       cursor: pointer;
-      text-decoration: none;
-      box-shadow: 0 0 15px #FFD700;
-      transition: transform 0.2s ease;
+      transition: 0.3s;
     }
 
-    .btn-comprar:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 25px #FFA500;
+    button:hover {
+      background: #00ccaa;
     }
 
-    .exemplo {
-      margin-top: 40px;
-      text-align: center;
-      font-size: 1.2rem;
-      line-height: 1.6;
-    }
-
-    .exemplo span {
-      display: block;
-      margin: 10px 0;
-    }
-
-    .exemplo .ganhou {
-      color: #00FF00;
-      font-weight: bold;
-      font-size: 1.3rem;
-    }
-
-    .exemplo .perdeu {
-      color: #FF6347;
+    .copy-msg {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #00ffcc;
+      display: none;
     }
   </style>
 </head>
 <body>
-  <h1>ACHE 3 FIGURAS IGUAIS E<br>LEVE NA HORA 10 CAMISETAS!</h1>
+  <div class="container">
+    <h1>Pague R$5 para girar a roleta!</h1>
+    <p>Copie o código abaixo e cole no app do seu banco:</p>
 
-  <a
-    class="btn-comprar"
-    href="https://www.mercadopago.com.br/checkout/v1/redirect?pref_id=226260096-cb3cd6dd-d3e7-4a5e-a8f8-018e22c32c6c"
-    target="_blank"
-  >
-    COMPRAR 1 CHANCE - R$5
-  </a>
+    <div id="pixCode" class="pix-code">
+      00020126950014br.gov.bcb.pix0136a7072ee1-b3f4-465a-a0cf-a348646a275f02331 chance de levar 10 camisetas!!!52040000530398654045.005802BR5924David Fonsin Cavalcanti 6008Brasilia62240520daqr136575769309628763044A36
+    </div>
 
-  <div class="exemplo">
-    <span class="perdeu">❌❌❌ = TENTE NOVAMENTE</span>
-    <span class="ganhou">👕👕👕 = GANHOU 10 CAMISETAS! 🎊</span>
+    <button onclick="copyPix()">Copiar código PIX</button>
+    <div id="copyMsg" class="copy-msg">Código copiado com sucesso!</div>
   </div>
+
+  <script>
+    function copyPix() {
+      const pix = document.getElementById("pixCode").innerText;
+      navigator.clipboard.writeText(pix).then(() => {
+        document.getElementById("copyMsg").style.display = "block";
+        setTimeout(() => {
+          document.getElementById("copyMsg").style.display = "none";
+        }, 3000);
+      });
+    }
+  </script>
 </body>
 </html>
