--- a/index.html
+++ b/index.html
@@ -1,104 +1,101 @@
-
-index.html
-
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Raspadinha DStreet</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DStreet Raspadinha</title>
   <style>
     body {
-      background: #111;
+      margin: 0;
+      padding: 0;
+      background-color: #0e0e0e;
       color: white;
       font-family: Arial, sans-serif;
       text-align: center;
-      margin: 0;
-      padding: 40px 20px;
     }
-
     h1 {
-      font-size: 2.5em;
       color: yellow;
-      text-shadow: 0 0 15px yellow;
+      font-size: 2em;
+      margin-top: 20px;
+      text-shadow: 0 0 10px yellow;
     }
-
-    #chanceText {
-      margin-top: 10px;
-      font-size: 1.2em;
+    h2 {
+      color: turquoise;
+      margin-bottom: 10px;
     }
-
     .btn {
-      background-color: #333;
+      background-color: yellow;
+      color: black;
       border: none;
-      padding: 15px 25px;
-      margin: 10px auto;
-      color: white;
-      font-size: 1em;
-      border-radius: 10px;
+      border-radius: 8px;
+      padding: 15px 20px;
+      margin: 10px;
+      font-size: 1.1em;
       cursor: pointer;
-      display: block;
-      width: fit-content;
+      width: 80%;
+      max-width: 300px;
     }
-
-    .admin-buttons {
-      margin-top: 40px;
+    .btn:active {
+      background-color: gold;
     }
-
-    .hidden {
-      display: none;
+    .info {
+      margin-top: 20px;
+      font-size: 0.95em;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
+  <h1>DSTREET COMPANY</h1>
+  <h2>ACHE 3 FIGURAS IGUAIS E GANHE O PRÊMIO!</h2>
+  <p id="chances">Chances restantes: 0</p>
 
-  <h1>Raspadinha DStreet</h1>
-  <p id="chanceText">Você tem <span id="chances">0</span> chance(s) de ganhar ATÉ 10 CAMISETAS!</p>
-  
-  <button id="startBtn" class="btn" disabled>Aguardando liberação...</button>
+  <button class="btn" ontouchstart="startHold(event, '5')" ontouchend="endHold()" onmousedown="startHold(event, '5')" onmouseup="endHold()">Pagar R$5,00 (1 chance)</button>
+  <button class="btn" ontouchstart="startHold(event, '10')" ontouchend="endHold()" onmousedown="startHold(event, '10')" onmouseup="endHold()">Pagar R$10,00 (3 chances)</button>
+  <button class="btn" ontouchstart="startHold(event, '20')" ontouchend="endHold()" onmousedown="startHold(event, '20')" onmouseup="endHold()">Pagar R$20,00 (6 chances)</button>
 
-  <!-- Botões secretos -->
-  <div class="admin-buttons hidden" id="adminControls">
-    <button class="btn" onclick="liberarChances(1)">LIBERAR 1 CHANCE</button>
-    <button class="btn" onclick="liberarChances(4)">LIBERAR 4 CHANCES</button>
-    <button class="btn" onclick="liberarChances(8)">LIBERAR 8 CHANCES</button>
-  </div>
+  <p class="info">
+    APÓS O PAGAMENTO, ENVIE O COMPROVANTE PELO <a href="https://wa.me/5511913304443" target="_blank" style="color:lightgreen; text-decoration: underline;">WHATSAPP</a>. <br />
+    VOCÊ RECEBERÁ O LINK COM SUAS CHANCES PRONTAS PARA USAR!
+  </p>
 
   <script>
-    let chances = 0;
-    const chancesSpan = document.getElementById('chances');
-    const startBtn = document.getElementById('startBtn');
+    let holdTimer;
 
-    function atualizarTexto() {
-      chancesSpan.innerText = chances;
-      startBtn.innerText = chances > 0 ? "Iniciar raspadinha" : "Aguardando liberação...";
-      startBtn.disabled = chances <= 0;
+    function startHold(event, value) {
+      event.preventDefault();
+      holdTimer = setTimeout(() => {
+        liberarChances(value);
+      }, 6000); // 6 segundos
     }
 
-    function liberarChances(qtd) {
-      chances += qtd;
-      atualizarTexto();
+    function endHold() {
+      clearTimeout(holdTimer);
     }
 
-    // Verifica se URL tem ?admin=liberar
-    const urlParams = new URLSearchParams(window.location.search);
-    if (urlParams.get("admin") === "liberar") {
-      document.getElementById('adminControls').classList.remove("hidden");
-    }
+    function liberarChances(valor) {
+      let chances = 0;
+      let codigoPix = '';
 
-    // Início raspadinha
-    startBtn.addEventListener("click", () => {
-      if (chances > 0) {
-        chances--;
-        atualizarTexto();
-        alert("Aqui inicia a raspadinha...");
-        // Aqui vai o código da raspadinha
+      if (valor === '5') {
+        chances = 1;
+        codigoPix = `00020126930014br.gov.bcb.pix0136a7072ee1-b3f4-465a-a0cf-a348646a275f02311 chance de levar 10 camisetas 52040000530398654045.005802BR5924David Fonsin Cavalcanti 6008Brasilia62240520daqr1365757693274784630470DC`;
+      } else if (valor === '10') {
+        chances = 3;
+        codigoPix = `00020126940014br.gov.bcb.pix0136a7072ee1-b3f4-465a-a0cf-a348646a275f02323 chances de levar 10 camisetas!520400005303986540510.005802BR5924David Fonsin Cavalcanti 6008Brasilia62240520daqr13657576934012906304C907`;
+      } else if (valor === '20') {
+        chances = 6;
+        codigoPix = `00020126940014br.gov.bcb.pix0136a7072ee1-b3f4-465a-a0cf-a348646a275f02326 chances de levar 10 camisetas 520400005303986540520.005802BR5924David Fonsin Cavalcanti 6008Brasilia62240520daqr13657576935260736304DE32`;
       }
-    });
 
-    atualizarTexto();
+      navigator.clipboard.writeText(codigoPix)
+        .then(() => {
+          alert(`Código Pix copiado! Envie o comprovante no WhatsApp para liberar suas ${chances} chance(s).`);
+        })
+        .catch(() => {
+          alert("Não foi possível copiar o código Pix.");
+        });
+    }
   </script>
-
 </body>
 </html>
-
